hphp/hack/test/typecheck/supertype_shape_must_include_optional_fields_in_subtype_shape.php.like_types.exp
File "supertype_shape_must_include_optional_fields_in_subtype_shape.php", line 4, characters 10-33:
Invalid return type (Typing[4110])
File "supertype_shape_must_include_optional_fields_in_subtype_shape.php", line 3, characters 64-70:
Expected ~shape() because it is an unenforceable type
File "supertype_shape_must_include_optional_fields_in_subtype_shape.php", line 3, characters 15-35:
But got shape(?'a' => string)
