hphp/hack/test/typecheck/supertype_shape_must_include_optional_fields_in_subtype_shape.php
<?hh

function test(shape(?'a' => string) $shape_with_known_fields): shape() {
  return $shape_with_known_fields;
}
